<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@drawable/house"/>
        <item android:id="@+id/nav_profile"
            android:title="@string/menu_profile"
            android:icon="@drawable/profile"/>
        <item android:id="@+id/nav_history"
            android:title="@string/menu_history"
            android:icon="@drawable/history"/>
        <item android:id="@+id/nav_signout"
            android:icon="@drawable/signout"
            android:title="@string/menu_logout"/>
        <item android:id="@+id/nav_about"
            android:icon="@drawable/information"
            android:title="@string/menu_about"/>
    </group>
</menu>