<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blooddonorsearch"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/maintitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="30sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="10sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:background="#F44336"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/DonorAccountSignup"
        android:text="@string/main_donor_account_sign_up"
        android:textStyle="bold"
        android:layout_marginTop="150sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/green_1"
        app:layout_constraintTop_toBottomOf="@+id/maintitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/DonorAccountDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_donor_account_sign_in"
        android:textStyle="bold"
        android:layout_marginTop="40sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/green_1"
        app:layout_constraintTop_toBottomOf="@+id/DonorAccountSignup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/DonorSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_search_for_donor"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="40sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/red_1"
        app:layout_constraintTop_toBottomOf="@+id/DonorAccountDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>