<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="donor"
            type="com.main.blooddonorserch.model.Donor" />
    </data>
    <androidx.cardview.widget.CardView
        android:elevation="20dp"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/donor_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title_donor_name"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/donorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{donor.donor_name}"
            android:textSize="15sp"
            android:padding="3sp"
            android:ellipsize="end"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10sp"
            android:maxLines="1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/donor_title"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/donor_bloodgroup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title_blood_group"
            android:layout_marginStart="10sp"
            android:layout_marginTop="20sp"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/donor_title"/>
        <TextView
            android:id="@+id/bloodgroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20sp"
            android:padding="3sp"
            android:text="@{donor.donor_blood_group}"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/donor_bloodgroup_title"
            app:layout_constraintTop_toTopOf="@+id/donorName" />

        <TextView
            android:id="@+id/donor_mobilenumber_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title_mobile_number"
            android:layout_marginStart="10sp"
            android:layout_marginTop="20sp"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/donor_bloodgroup_title"/>
        <TextView
            android:id="@+id/mblnumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0sp"
            android:layout_marginTop="20sp"
            android:padding="3sp"
            android:text="@{donor.donor_mobile_number}"
            android:textColor="@color/black"
            android:autoLink="phone"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/donor_mobilenumber_title"
            app:layout_constraintTop_toTopOf="@+id/bloodgroup" />
        <TextView
            android:id="@+id/donor_address_titile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title_address"
            android:layout_marginStart="10sp"
            android:layout_marginTop="20sp"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/donor_mobilenumber_title"/>

        <TextView
            android:id="@+id/donor_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0sp"
            android:layout_marginTop="20sp"
            android:padding="3sp"
            android:text='@{donor.donor_city+", "+donor.donor_state+", "+donor.donor_country}'
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/donor_address_titile"
            app:layout_constraintTop_toTopOf="@+id/mblnumber" />
        <ImageButton
            android:id="@+id/shareButton"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:src="@android:drawable/ic_menu_share"
            android:contentDescription="Share Button"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginEnd="1dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
